<resources>
    <string name="app_name">DiscountCards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="card_full_image">card full image</string>
    <string name="card_image">card image</string>
    <string name="set_title_dialog_title">Новая карта</string>
    <string name="set_title_dialog_hint">Название карты</string>
    <string name="show_card_error_message">Упс!..\nЧто-то пошло не так</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="apply_button">Готово</string>
    <string name="card_title">Card title</string>
</resources>