<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/set_title_dialog_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image_in_dialog"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/card_image"
        android:scaleType="centerCrop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/set_title_dialog_hint"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_in_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/ed_medicine_title"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="8dp"-->
    <!--        android:layout_marginVertical="8dp"-->
    <!--        android:hint="string/edit_medicine_name"-->
    <!--        android:inputType="textCapSentences"-->
    <!--        android:paddingHorizontal="8dp"-->
    <!--        android:textSize="21sp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/ed_button_ok"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/button_ok"-->
    <!--        android:textSize="21sp" />-->

</LinearLayout>